--- a/ex00/github/workflows/ci.yml
+++ b/ex00/github/workflows/ci.yml
@@ -3,12 +3,11 @@ name: MyFirstCI
 on:
   push:
     branches:
-      -main
+      - main
 
 jobs:
   build:
-    runs-on: 
-      - ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: firsttest
-      - run: echo "Hello, World"
+        run: echo "Hello, World"
